--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.3",
     "prettier": "^3.3.1",
+    "prisma": "^5.15.0",
     "rimraf": "^5.0.7",
     "typescript": "^5.4.5"
   },
