--- a/api/package.json
+++ b/api/package.json
@@ -25,8 +25,11 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@fastify/swagger": "^8.14.0",
+    "@fastify/jwt": "^8.0.1",
     "@prisma/client": "5.15.0",
-    "fastify": "^4.27.0"
+    "fastify": "^4.27.0",
+    "fastify-zod": "^1.4.0",
+    "zod": "^3.23.8",
+    "zod-to-json-schema": "^3.23.0"
   }
 }
