--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@fastify/jwt": "^8.0.1",
+    "@fastify/swagger": "^8.14.0",
     "@prisma/client": "5.15.0",
     "fastify": "^4.27.0",
     "fastify-zod": "^1.4.0",
