--- a/api/package.json
+++ b/api/package.json
@@ -2,15 +2,15 @@
   "name": "InventoTrack-api",
   "version": "0.1.0",
   "description": "",
-  "main": "index.ts",
+  "main": "app.ts",
   "scripts": {
     "build": "rimraf dist && tsc",
     "prestart": "pnpm run build",
-    "start": "node --env-file .env dist/index.js",
+    "start": "node --env-file .env dist/app.js",
     "predev": "rimraf dist && pnpm run build",
-    "dev": "concurrently \"tsc -w\" \"nodemon --env-file .env dist/index.js\"",
+    "dev": "concurrently \"tsc -w\" \"nodemon --env-file .env dist/app.js\"",
     "lint": "pnpm exec prettier . --write",
-    "serve": "node dist/index.js"
+    "serve": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,7 @@
     "@types/node": "^20.14.2",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.3",
+    "pino-pretty": "^11.1.0",
     "prettier": "^3.3.1",
     "prisma": "^5.15.0",
     "rimraf": "^5.0.7",
