--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "@fastify/jwt": "^8.0.1",
     "@fastify/swagger": "^8.14.0",
     "@prisma/client": "5.15.0",
+    "argon2": "^0.40.3",
     "fastify": "^4.27.0",
     "fastify-zod": "^1.4.0",
     "zod": "^3.23.8",
