--- a/api/package.json
+++ b/api/package.json
@@ -9,21 +9,26 @@
     "start": "node --env-file .env dist/app.js",
     "predev": "rimraf dist && pnpm run build",
     "dev": "concurrently \"tsc -w\" \"nodemon --env-file .env dist/app.js\"",
-    "lint": "pnpm exec prettier . --write",
+    "lint": "pnpm exec @biomejs/biome lint --write ./src",
     "serve": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@biomejs/biome": "1.8.1",
     "@types/node": "^20.14.2",
     "concurrently": "^8.2.2",
+    "eslint": "9.x",
+    "globals": "^15.4.0",
+    "i": "0.3.7",
     "nodemon": "^3.1.3",
     "pino-pretty": "^11.1.0",
-    "prettier": "^3.3.1",
+    "prettier": "^3.3.2",
     "prisma": "^5.15.0",
     "rimraf": "^5.0.7",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.13.0"
   },
   "dependencies": {
     "@fastify/jwt": "^8.0.1",
