--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,8 @@
     "start": "node --env-file .env dist/app.js",
     "predev": "rimraf dist && pnpm run build",
     "dev": "concurrently \"tsc -w\" \"nodemon --env-file .env dist/app.js\"",
-    "lint": "pnpm exec @biomejs/biome lint --write ./src",
+    "format": "pnpm exec prettier . --write",
+    "lint": "pnpm exec eslint --fix .",
     "serve": "node dist/app.js"
   },
   "keywords": [],
@@ -17,9 +18,13 @@
   "license": "ISC",
   "devDependencies": {
     "@biomejs/biome": "1.8.1",
+    "@eslint/js": "^9.6.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.14.2",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
     "concurrently": "^8.2.2",
-    "eslint": "9.x",
+    "eslint": "~9.4.0",
     "globals": "^15.4.0",
     "i": "0.3.7",
     "nodemon": "^3.1.3",
