--- a/api/package.json
+++ b/api/package.json
@@ -13,11 +13,8 @@
     "lint": "pnpm exec eslint --fix .",
     "serve": "node dist/app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Vasu Jain",
   "devDependencies": {
-    "@biomejs/biome": "1.8.1",
     "@eslint/js": "^9.6.0",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.14.2",
@@ -26,7 +23,6 @@
     "concurrently": "^8.2.2",
     "eslint": "~9.4.0",
     "globals": "^15.4.0",
-    "i": "0.3.7",
     "nodemon": "^3.1.3",
     "pino-pretty": "^11.1.0",
     "prettier": "^3.3.2",
